# neurosync

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  init-ssl.sh  tweets.md
api/: .env.example  Dockerfile  nest-cli.json  package-lock.json  package.json  tsconfig.json
api/src/: app.module.ts  config.ts  main.ts
api/src/common/: name.util.ts
api/src/config/: config.controller.ts
api/src/db/: db.service.ts
api/src/heartbeat/: heartbeat.controller.ts
api/src/hosted/: hosted.controller.ts
api/src/indexer/: indexer.service.ts
api/src/registry/: registry.controller.ts  registry.service.ts
api/src/rpc/: rpc.controller.ts
api/src/share/: share.controller.ts
docs/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
docs/src/: router.js
docs/src/pages/docs/: layout.js
docs/src/styles/: index.css
nginx/: bootstrap.conf  full.conf
program/: Cargo.toml  README.md
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/: admin.mjs  agent-heartbeat.mjs  package-lock.json  package.json  smoke.mjs
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/src/: api.js  config.js  main.js  router.js  style.css
web/src/components/: empty.js  footer.js  navbar.js  wallet-modal.js
web/src/lib/: animate.js  format.js  program.js  wallet.js
web/src/pages/: activity.js  agent.js  explore.js  landing.js  leaderboard.js  register.js  setup.js
(+12 files in other folders)
